# xlog

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.sub  configure  configure.ac
data/: Makefile.am  Makefile.in
data/desktop/: Makefile.am  Makefile.in  xlog.desktop
data/doc/: AUTHORS  BUGS  KEYS  Makefile.am  Makefile.in  THANKS  TODO
data/doc/manual/: Makefile.am  Makefile.in  README  appendix-bands.dox  appendix-keys.dox  appendix-modes.dox  appendix-prosigns.dox  appendix-qcodes.dox  dialogs-and-windows.dox  getting_started.dox  intro.dox  keyer.dox  license.dox  preferences.dox  xlog_manual.css  xlog_user.txt
data/doc/manual/output/: Makefile.am  Makefile.in
data/doc/manual/output/html/: Makefile.am  Makefile.in  appendix-bands.html  appendix-keys.html  appendix-modes.html  appendix-prosigns.html  appendix-qcodes.html  dialogs-and-windows.html  getting-started.html  index.html  keyer.html  license.html  navtree.js  navtreeindex0.js  pages.html  preferences.html
data/doc/manual/output/html/search/: Makefile.am  Makefile.in  all_64.js  all_6b.js  all_70.js  pages_61.js  search.js
data/dxcc/: Makefile.am  Makefile.in
data/glabels/: Makefile.am  Makefile.in  qsllabels.glabels
data/images/: Makefile.am  Makefile.in
data/man/: Makefile.am  Makefile.in  xlog.1.in
data/maps/: Makefile.am  Makefile.in
data/maps/3D2/: Makefile.am  Makefile.in
data/maps/3Y/: Makefile.am  Makefile.in
data/maps/E5/: Makefile.am  Makefile.in
data/maps/FK/: Makefile.am  Makefile.in
data/maps/FO/: Makefile.am  Makefile.in
data/maps/FR/: Makefile.am  Makefile.in
data/maps/HK0/: Makefile.am  Makefile.in
data/maps/JD/: Makefile.am  Makefile.in
data/maps/KH8/: Makefile.am  Makefile.in
data/maps/SV/: Makefile.am  Makefile.in
data/maps/VP6/: Makefile.am  Makefile.in
data/maps/VP8/: Makefile.am  Makefile.in
data/mime/: Makefile.am  Makefile.in  xlog.xml
data/pixmaps/: Makefile.am  Makefile.in  mini-clock.xpm  mini-trx.xpm  mini-xlog.xpm  s-meter.xpm  s.xpm  s0.xpm  s1.xpm  s2.xpm  s3.xpm  s4.xpm  s5.xpm  s6.xpm  s7.xpm  s8.xpm  s9.xpm  xlog.xpm
data/remote/: Makefile.am  Makefile.in  README  client.c  fromxlog.c  sendtoxlog.c
data/utils/: Makefile.am  Makefile.in  mkrigstruct.c
m4/: Makefile.am  Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  cs.gmo  cs.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  sk.gmo  sk.po  sv.gmo  sv.po  xlog.pot
src/: Makefile.am  Makefile.in  awards_enum.c  awards_enum.h  callbacks_mainwindow.c  callbacks_mainwindow.h  callbacks_mainwindow_list.c  callbacks_mainwindow_list.h  callbacks_mainwindow_menu.c  callbacks_mainwindow_menu.h  callbacks_mainwindow_qsoframe.c  callbacks_mainwindow_qsoframe.h  callbacks_mainwindow_toolbar.c  callbacks_mainwindow_toolbar.h  callbacks_preferencesdialog.c  callbacks_preferencesdialog.h  cfg.c  cfg.h  dxcc.c  dxcc.h  gc.c  gc.h  gui_aboutdialog.c  gui_aboutdialog.h  gui_awards_dxcc.c  gui_awards_dxcc.h  gui_awards_iota.c  gui_awards_iota.h  gui_awards_locator.c  gui_awards_locator.h  gui_awards_wac.c  gui_awards_wac.h  gui_awards_was.c  gui_awards_was.h  gui_awards_waz.c  gui_awards_waz.h  gui_b4window.c  gui_b4window.h  gui_closedialog.c  gui_closedialog.h  (+78 more)
src/logfile/: Makefile.am  Makefile.in  adif2.c  cabrillo3.c  edi.c  editest.c  flog.c  labels.c  logfile.c  logfile.h  oh1aa.c  trlog.c  twlog.c
