IMAGES = xlog-defaultsdialog.png \
	xlog-dupecheckdialog.png \
	xlog-exportdialog.png \
	xlog-exportsettings.png \
	xlog-keyerwindow.png \
	xlog-logeditor.png \
	xlog-mainwindow.png \
	xlog-mergelogdialog.png \
	xlog-newlogdialog.png \
	xlog-openlogdialog.png \
	xlog-importdialog.png \
	xlog-exportdialog.png \
	xlog-pagesetupdialog.png \
	xlog-preferencesdialog-hamlib.png \
	xlog-preferencesdialog-info.png \
	xlog-preferencesdialog-logs.png \
	xlog-preferencesdialog-general.png \
	xlog-printdialog.png \
	xlog-workedwindow.png \
	xlog-scorewindow.png \
	xlog-searchdialog.png

EXTRA_DIST = $(IMAGES)
