SUBDIRS = 3D2 3Y E5 FO FK FR HK0 JD KH8 SV VP6 VP8

MAP_FILES = worldmap.jpg \
1S.png \
3A.png \
3B6.png \
3B8.png \
3B9.png \
3C.png \
3C0.png \
3D2.png \
3DA.png \
3V.png \
3W.png \
3X.png \
4J.png \
4L.png \
4O.png \
4S.png \
4U1I.png \
4U1U.png \
4W.png \
4X.png \
5A.png \
5B.png \
5H.png \
5N.png \
5R.png \
5T.png \
5U.png \
5V.png \
5W.png \
5X.png \
5Z.png \
6W.png \
6Y.png \
7O.png \
7P.png \
7Q.png \
7X.png \
8P.png \
8Q.png \
8R.png \
9A.png \
9G.png \
9H.png \
9J.png \
9K.png \
9L.png \
9M2.png \
9M6.png \
9N.png \
9Q.png \
9U.png \
9V.png \
9X.png \
9Y.png \
A2.png \
A3.png \
A4.png \
A5.png \
A6.png \
A7.png \
A9.png \
AP.png \
BS7.png \
BV.png \
BV9P.png \
BY.png \
C2.png \
C3.png \
C5.png \
C6.png \
C9.png \
CE.png \
CE0X.png \
CE0Y.png \
CE0Z.png \
CE9.png \
CM.png \
CN.png \
CP.png \
CT.png \
CT3.png \
CU.png \
CX.png \
CY9.png \
CY0.png \
D2.png \
D4.png \
D6.png \
DL.png \
DU.png \
E3.png \
E4.png \
E7.png \
EA.png \
EA6.png \
EA8.png \
EA9.png \
EI.png \
EK.png \
EL.png \
EP.png \
ER.png \
ES.png \
ET.png \
EU.png \
EX.png \
EY.png \
EZ.png \
FG.png \
FH.png \
FJ.png \
FK.png \
FM.png \
FO.png \
F.png \
FP.png \
FR.png \
FS.png \
FT5W.png \
FT5X.png \
FT5Z.png \
FW.png \
FY.png \
G.png \
GD.png \
GI.png \
GJ.png \
GM.png \
GU.png \
GW.png \
H4.png \
H40.png \
HA.png \
HB0.png \
HB.png \
HC.png \
HC8.png \
HH.png \
HI.png \
HK.png \
HL.png \
HM.png \
HP.png \
HR.png \
HS.png \
HV.png \
HZ.png \
I.png \
IS.png \
J2.png \
J3.png \
J5.png \
J6.png \
J7.png \
J8.png \
JA.png \
JT.png \
JW.png \
JX.png \
JY.png \
KG4.png \
KH0.png \
KH1.png \
KH2.png \
KH3.png \
KH4.png \
KH5.png \
KH5K.png \
KH6.png \
KH7K.png \
KH8.png \
KH9.png \
KL.png \
KP1.png \
KP2.png \
KP4.png \
KP5.png \
K.png \
LA.png \
LU.png \
LX.png \
LY.png \
LZ.png \
OA.png \
OD.png \
OE.png \
OH.png \
OH0.png \
OJ0.png \
OK.png \
OM.png \
ON.png \
OX.png \
OY.png \
OZ.png \
P2.png \
P4.png \
PA.png \
PJ2.png \
PJ7.png \
PY.png \
PY0F.png \
PY0S.png \
PY0T.png \
PZ.png \
R1FJ.png \
R1MV.png \
S0.png \
S2.png \
S5.png \
S7.png \
S9.png \
SM.png \
SP.png \
ST.png \
SU.png \
SV.png \
SV5.png \
SV9.png \
T2.png \
T30.png \
T31.png \
T32.png \
T33.png \
T5.png \
T7.png \
T8.png \
TA.png \
TF.png \
TG.png \
TI.png \
TI9.png \
TJ.png \
TK.png \
TL.png \
TN.png \
TR.png \
TT.png \
TU.png \
TY.png \
TZ.png \
UA2.png \
UA9.png \
UA.png \
UK.png \
UN.png \
UR.png \
V2.png \
V3.png \
V4.png \
V5.png \
V6.png \
V7.png \
V8.png \
VE.png \
VK0H.png \
VK0M.png \
VK9C.png \
VK9L.png \
VK9M.png \
VK9N.png \
VK9W.png \
VK9X.png \
VK.png \
VP2E.png \
VP2M.png \
VP2V.png \
VP5.png \
VP6.png \
VP8.png \
VP9.png \
VQ9.png \
VR.png \
VU.png \
VU4.png \
VU7.png \
XE.png \
XF4.png \
XT.png \
XU.png \
XW.png \
XX9.png \
XZ.png \
YA.png \
YB.png \
YI.png \
YJ.png \
YK.png \
YL.png \
YN.png \
YO.png \
YS.png \
YU.png \
YV.png \
YV0.png \
Z2.png \
Z3.png \
ZA.png \
ZB.png \
ZC4.png \
ZD7.png \
ZD8.png \
ZD9.png \
ZF.png \
ZK2.png \
ZK3.png \
ZL.png \
ZL7.png \
ZL8.png \
ZL9.png \
ZP.png \
ZS.png \
ZS8.png

xlog_mapsdir = $(datadir)/xlog/maps

xlog_maps_DATA = $(MAP_FILES)

EXTRA_DIST = $(MAP_FILES)
