xlog_pixmapsdir = $(datadir)/pixmaps/xlog

xlog_pixmaps_DATA = \
	xlog.svg \
	xlog-icon.png \
	xlog.png \
	xlog-keyer.png \
	xlog-b4.png \
	xlog-map.png \
	xlog-scoring.png \
	gnome-mime-text-x-xlog.png \
	xlog.xpm \
	mini-clock.xpm \
	mini-trx.xpm \
	mini-xlog.xpm \
	s0.xpm \
	s1.xpm \
	s2.xpm \
	s3.xpm \
	s4.xpm \
	s5.xpm \
	s6.xpm \
	s7.xpm \
	s8.xpm \
	s9.xpm \
	s-meter.xpm \
	s.xpm \
	cwdaemon.png \
	jigsaw.png \
	countrymap.png

xlog_icondir = $(datadir)/icons

xlog_icon_DATA = \
	gnome-mime-text-x-xlog.png \
	xlog-icon.png

EXTRA_DIST = $(xlog_pixmaps_DATA)
